Update project structure and add new features